--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CreateTaskActivity"
-            android:label="@string/activity_new_task_label"></activity>
+        <activity
+            android:name=".CreateTaskActivity"
+            android:label="@string/activity_new_task_label" />
     </application>
 
 </manifest>
